# WinterFramework

./: .gitignore  CMakeLists.txt  CreateProjects.bat  CreateProjects.sh  InputUIControllerGraph.cpp  InputUIControllerGraph.hpp  LICENSE  README.md  build.py  makefile  premake5.lua  premake5.vars.lua
app/: main.cpp
assets/Sounds/: Master.bank  Master.strings.bank
examples/simple_app/: premake5.lua
examples/simple_app/app/: global.h
framework/: Audio.h  Entry.h  Log.h  Physics.h  Windowing.h
framework/app/: Console.h  EngineLoop.h  InputMap.h  System.h
framework/ext/: AudioFMOD.h  MeshGenerators.h  Time.h
framework/ext/impl/: Time.cpp
framework/ext/rendering/: Camera.h  Sprite.h
framework/ext/serial/: SimpleServer.h  multi_vector.h  serial_bin.h
framework/ext/systems/: ConsoleSystem.h
framework/impl/: Audio.cpp  Common.cpp  Log.cpp  Physics.cpp  Rendering.cpp  Windowing.cpp
framework/impl/app/: Console.cpp  EngineLoop.cpp  FontMap.cpp  InputMap.cpp  InternalSystems.cpp  InternalSystems.h  System.cpp
framework/util/: allocator.h  error_check.h  free_list.h  metrics.h
game/: CoordTranslation.h  Data.cpp  Data.h  Events.h  Flocker.h  GameRender.cpp  GameRender.h  HighscoreRecord.h  LevelSystem.h  Player.h  Prefabs.cpp  Prefabs.h  Sand.h  UserSettings.h  Weapons.h  main.cpp
game/Components/: EnemyAI.h  Flocker.h  FuelTank.h  Item.h  KeepOnScreen.h  Lightning.h  Player.h  Throwable.h  Weapon.h
game/Sand/: DiscreteSandWorld.h  Sand.h  SandComponents.h  SandEntity.cpp  SandEntity.h  SandEvents.h  SandHelpers.cpp  SandHelpers.h  SandSystems.cpp  SandSystems.h
game/Sand/Render/: DrawCollisionInfo.cpp  DrawCollisionInfo.h
game/Sand/Systems/: CollideProjectile.h  CreateCollider.h  DrawSandSprites.h  ExplodeToDust.h  RemoveCellFromSprite.h  SplitTiles.h  UpdateLineProjectileMesh.h
game/Systems/: AllowPauseMenu.h  Background.h  EnemyController.h  EnemySpawner.h  EnemySystem.h  ExplodeNearTarget.h  ExplosionSpawner.h  FireWeapon.h  FireWeaponAfterDelay.h  FlockingMovement.h  HighscoreStore.h  InitGame.h  InitMainMenu.h  ItemPickup.h  ItemSpawner.h  ItemSystem.h  KeepOnScreen.h  LightningSystem.h  LowCorePixelDeath.h  PlayerController.h  PlayerSpawner.h  RenderScene.h  RenderSceneGraph.h  RockSpawner_Test.h  SpawnerUpdate.h  TankSystem.h  TurnTwoardsTarget.h  zTestingSystem.h
game/UI/: AsteroidsHUD.h  AsteroidsMenu.h  PauseMenu.h  PlayerHUD.h
include/: Audio.h  Clock.h  Common.h  Defines.h  Entity.h  Event.h  Input.h  Log.h  Physics.h  Rendering.h  Windowing.h
include/app/: Application.h  EngineLoop.h  InputMap.h  Scene.h  SceneNode.h  SceneUpdateGroup.h  SceneUpdateGroupNode.h  Update.h  UpdateTree.h
include/engine/: io.h
include/ext/: AssetItem.h  AssetStore.h  EntityPrefab.h  InputEventHandler.h  SteamAudio.h  Transform.h
include/ext/algo/: flood_fill.h
include/ext/physics/: ClosestPointOnShape.h
include/ext/rendering/: BatchSpriteRenderer.h  Camera.h  DebugRender.h  GizmoRender.h  ImportMesh.h  ImportShader.h  Model.h  Particle.h  Sprite.h  TextureAtlas.h
include/ext/serial/: serial.h  serial_bin.h  serial_common.h  serial_json.h
include/ext/systems/: PhysicsColliderRender.h
include/io/: AtlasFromImage.h  LibraryName.h
include/util/: AABB.h  Color.h  SimpleTrace.h  Transform.h  allocator.h  choose.h  context.h  error_check.h  function.h  linear_allocator.h  math.h  pool_allocator.h  random.h  range_vector.h  ref.h  stl.h  thread_pool.h  typedef.h
include/v2/: EntitySystem.h  JobSystem.h  Memory.h  PhysicsSystem.h  RenderSystem.h  RenderSystemOptions.h
include/v2/Render/: Access.h  Camera.h  CameraAdapter.h  CameraLens.h  MeshLayout.h  MeshView.h  NewRendering.h  Particle.h  RenderOptions.h  RenderPass.h  RenderTranslateOptions.h  Target.h  Texture.h  TextureCache.h  TextureLayout.h  TextureView.h  platform_gl.h  platform_host.h
project/: create_project.py  template_CMakeLists.txt  template_main.cpp
src/: Audio.cpp  Audio.h  Clock.cpp  Common.cpp  Common.h  Concept.h  Defines.h  EngineLoop.h  Entity.cpp  Entity.h  Entity__.h  Entry.h  Event.cpp  Event.h  Event2.h  Input.cpp  Leveling.h  Log.cpp  Log.h  Physics.cpp  Physics.h  Rendering.cpp  Rendering.h  Task.h  Time.cpp  Windowing.cpp  Windowing.h
src/app/: Application.cpp  Console.cpp  Console.h  EngineLoop.cpp  EngineLoop.h  FontMap.h  InputEventHandler.cpp  InputEventHandler.h  InputMap.cpp  InputMap.h  InternalSystems.cpp  Scene.cpp  SceneNode.cpp  SceneUpdateGroup.cpp  SceneUpdateGroupNode.cpp  System.cpp  System.h  Task.h  Time.cpp  Time.h  Update.cpp  UpdateTree.cpp
src/engine/: io.cpp  io.h  pass_context.h  script.h
src/ext/: AssetItem.h  AssetStore.h  Components.h  EntityPrefab.cpp  EntityPrefab.h  InputEventHandler.cpp  Sand.h  Serial.h  SimpleServer.h  SteamAudio.cpp  SteamAudio.h  Task.h  Time.h  Transform.h  flood_fill.h  serial_common.h
src/ext/algo/: flood_fill.h  marching_cubes.h
src/ext/cpp/: Time.cpp
src/ext/impl/: AssetStore.cpp  EntityPrefab.cpp  SteamAudio.cpp  Time.cpp  serial_json.cpp
src/ext/physics/: ClosestPointOnShape.cpp  ClosestPointOnShape.h
src/ext/rendering/: BatchLineRenderer.cpp  BatchLineRenderer.h  BatchSpriteRenderer.cpp  BatchSpriteRenderer.h  Camera.h  DebugRender.cpp  DebugRender.h  GizmoRender.cpp  ImportMesh.cpp  ImportMesh.h  (+12 more)
src/impl/: Audio.cpp  Common.cpp  Entity.cpp  Event.cpp  Log.cpp  Physics.cpp  Rendering.cpp  Windowing.cpp
src/io/: AtlasFromImage.cpp  ImageFromDisk.h  LibraryName.cpp
src/util/: AABB.cpp  ArrayView.h  Color.cpp  Color.h  SimpleTrace.cpp  Transform.cpp  Transform3D.cpp  Transform3D.h  allocator.h  comparable_str.h  context.h  error_check.h  filesystem.h  free_list.h  function.h  geometry.h  graph.h  linear_allocator.cpp  list.h  math.cpp  math.h  metrics.cpp  metrics.h  named.h  nonce.cpp  nonce.h  pool_allocator.h  random.cpp  random.h  ref.h  stl.h  thread_pool.h  tsque.h  type_info.h
src/v2/: EntitySystem.cpp  JobSystem.cpp  RenderSystem.cpp  RenderSystemTranslation.cpp  RenderSystemTranslation.h
test/: Entity.Entt_test.cpp  Leveling_Test.cpp  NewDemo.cpp  Tetris.cpp  Window_Test.cpp
(+83 files in other folders)
